--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>EJS Live Preview - Real-time Template Editor</title>
     <meta name="description" content="Create and preview EJS templates in real-time. Perfect for learning EJS templating with live examples and instant feedback." />
