--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     </head>
     <body>
         <div id="root"></div>
+
+        <script src="https://cdn.jsdelivr.net/npm/ejs@3.1.9/ejs.min.js"></script>
         <script type="module" src="/src/main.tsx"></script>
     </body>
 </html>
